name:                hoggle
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/erantapaa/hoggle#readme
license:             BSD3
license-file:        LICENSE
author:              Erik Rantapaa
maintainer:          example@example.com
copyright:           2015 Erik Rantapaa
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10
data-files:    dicts/4x4.txt, dicts/5x5.txt, dicts/word.list, dicts/ods6.txt

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Solver, Run, GridBitSet, Grid
  other-modules:       Paths_hoggle
  build-depends:       base >= 4.7 && < 5, bytestring, containers, data-ordlist, bytestring-trie, timeit
  default-language:    Haskell2010

executable hoggle-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -O2
  build-depends:       base
                     , hoggle
  default-language:    Haskell2010

test-suite hoggle-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hoggle
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/hoggle
